# jambot

./: .coverage  .flake8  .funcignore  .gitignore  .pre-commit-config.yaml  Functions.py  JambotClasses.py  LiveTrading.py  Makefile  Pipfile  README.md  client_secret.json  codecov.yml  coverage.xml  launch.py  ml_testing.py  pyproject.toml  requirements.txt  symbols.csv
FiveMin/: __init__.py  function.json
HttpTrigger/: __init__.py
OneHour/: __init__.py
Project/: Functions.py  JambotClasses.py  Launch.py  LiveTrading.py
SQL/: symbol_dates.sql  update_bybit_symbols.sql
az_FifteenMin/: __init__.py  function.json
az_FiveMin/: __init__.py
az_HttpTrigger/: __init__.py
az_OneHour/: __init__.py  function.json
az_RetrainModel/: __init__.py  function.json
az_train_model/: __init__.py  function.json
jambot/: __init__.py  backtest.py  charts.py  comm.py  common.py  config.py  data.py  database.py  functions.py  jambotclasses.py  livetrading.py  logger.py  optimization.py  signals.py  sklearn_helper_funcs.py  sklearn_utils.py  ta.py  tables.py  weights.py
jambot/_res/: model_config.yaml
jambot/_res/swagger/: bitmex-test.json  bitmex.json  bybit-test.json  bybit.json
jambot/data/: symbols.csv
jambot/exchanges/: __init__.py  binance.py  bitmex.py  bybit.py  bybit_compat.py  exchange.py
jambot/ml/: classifiers.py  dataloading.py  models.py  sequence.py  storage.py
jambot/strategies/: __init__.py  chop.py  ml.py  sfp.py  trend.py  trendclose.py  trendrev.py
jambot/tradesys/: __init__.py  _archive.py  backtest.py  base.py  broker.py  enums.py  exceptions.py  orders.py  symbols.py  trade.py  wallet.py
jambot/tradesys/strategies/: __init__.py  base.py  chop.py  ml.py  sfp.py  trend.py  trendclose.py  trendrev.py
jambot/utils/: azureblob.py  google.py  mlflow.py  secrets.py  skopt.py  storage.py  styles.py
scripts/: utils.py
tests/: __init__.py  conftest.py  test_livetrading.py  test_storage.py  test_tables.py
tests/exchanges/: test_bitmex.py
tests/tradesys/: __init__.py  test_broker.py  test_orders.py  test_trade.py  test_wallet.py
tests/tradesys/strategies/: __init__.py  test_base.py  test_ml.py
working/: archive.py  bitmex_working.py  launch.py  ml_working.py
